@@ -1,3 +1,15 @@
+2007-03-19  Murray Cumming  <murrayc@murrayc-desktop>
+
+	* libgda/gda-data-model-private.h:
+	* providers/ldap/gda-ldap-recordset.c:
+	(gda_ldap_recordset_class_init):
+	* providers/msql/gda-msql-recordset.c:
+	(gda_msql_recordset_class_init):
+	* providers/oracle/gda-oracle-recordset.c:
+	(gda_oracle_recordset_class_init):
+	#ifdef-ed out the definitions of the functions that used gda_data_model_get_command_text(), 
+	to prevent linker errors, and added comments pointing to the relevant bug report.
+
 2007-03-19  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/sql-delimiter/Makefile.am: applied patch from
